crates/gapura-core/tests/snapshots/golden__gatewayclass-accepted.snap
---
source: crates/gapura-core/tests/golden.rs
expression: t
---
config:
  listeners: []
  ports: {}
  clusters: {}
status:
  - kind: GatewayClass
    name: gapura
    conditions:
      - type: Accepted
        status: "True"
        reason: Accepted
        message: Handled by Gapura
        observedGeneration: 1
    supportedFeatures:
      - Gateway
      - HTTPRoute
      - ReferenceGrant
