crates/gapura-core/tests/snapshots/golden__gatewayclass-mixed.snap
---
source: crates/gapura-core/tests/golden.rs
expression: t
---
config:
  listeners: []
  ports: {}
  clusters: {}
status:
  - kind: GatewayClass
    name: gapura
    conditions:
      - type: Accepted
        status: "True"
        reason: Accepted
        message: Handled by Gapura
        observedGeneration: 2
    supportedFeatures:
      - Gateway
      - HTTPRoute
      - PathMatchRegularExpression
      - ReferenceGrant
